--- a/my-first-project/src/app/app.component.html
+++ b/my-first-project/src/app/app.component.html
@@ -7,8 +7,8 @@
 <!-- <app-parent> </app-parent> -->
 <!-- <app-first></app-first> -->
 <!-- <app-header></app-header> -->
-<app-query1></app-query1>
-<!-- <app-place></app-place> -->
+<!-- <app-query1></app-query1> -->
+<app-place></app-place>
 <!-- <app-assign></app-assign> -->
 
 
