--- a/my-first-project/src/app/query2/query2.component.html
+++ b/my-first-project/src/app/query2/query2.component.html
@@ -1,7 +1,11 @@
 <p>query2 works!</p>
-<h1 #example>This is a Reference</h1>
-<h1 #example>This is a Reference</h1>
-<h1 #example>This is a Reference</h1>
-<h1 #example>This is a Reference</h1>
+<h1 #example>This is a Reference1</h1>
+<h2 #example>This is a Reference2</h2>
+<h3 #example>This is a Reference3</h3>
+<h4 #example>This is a Reference4</h4>
+<div>
+    arey wast fellow
+</div>
 
-<ng-content></ng-content>                                           <!--view Queries- @ContentChild-->
+<!-- view Queries- @ContentChild -->
+<!-- <ng-content></ng-content>                                           -->
