--- a/practice1/src/app/comp1/comp1.component.html
+++ b/practice1/src/app/comp1/comp1.component.html
@@ -1,1 +1,40 @@
-<h1>Raj Kishore Acharya</h1>
+<div class="col-md-4 offset-md-4">
+<div class="card">
+    <div class="card-header">
+        <h3>Reactive Form</h3>
+    </div>
+    <div class="card-body">
+        <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+            <div class="form-group mt-2">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" formControlName="name">
+
+
+            </div>
+            <div class="form-group mt-2">
+                <label for="email" class="form-label">email</label>
+                <input type="email" class="form-control" formControlName="email">
+            </div>
+            <div class="form-group mt-2">
+                <label for="name" class="form-label">Password</label>
+                <input type="password" class="form-control" formControlName="pwd">
+
+                <div *ngIf="f.pwd.touched && f.pwd.invalid">
+                    <div class="text-danger" *ngIf="f.pwd.required">This Field is required </div>
+                </div>
+            </div>
+            <div class="form-group mt-2">
+                <label for="name" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" formControlName="cnfpwd">
+
+                <div *ngIf="f.cnfpwd.touched && f.cnfpwd.invalid">
+                    <div class="text-danger" *ngIf="f.cnfpwd.errors.required">Confirm Password is required </div>
+                    <div class="text-danger" *ngIf="f.cnfpwd.errors.MustMatch"> Password is not mathing</div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary mt-2 " [disabled]="signInForm.invalid">Submit</button>
+
+        </form>
+    </div>
+</div>
+</div>
