--- a/project3/src/app/app.component.html
+++ b/project3/src/app/app.component.html
@@ -24,7 +24,11 @@
 
         <li class="nav-item " *ngIf= 'this.data.onLogin()'>
         <a href="" class="nav-link active float-end" (click)="this.data.onLogout()">Logout</a>
-        </li>        
+        </li>  
+        
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="dogs">Dogs</a>
+        </li>
       </ul>
     </div>
   </div>
