--- a/lab/src/app/sample/sample.component.html
+++ b/lab/src/app/sample/sample.component.html
@@ -22,7 +22,7 @@
             </thead>
             <tbody>
               <tr *ngFor="let data of details | pipe :inputName">
-                <th>{{date}}</th>
+                <th>{{date | date : "MMM dd,yyyy,h:mm:ss a"}}</th>
                 <td>{{data.Name}}</td>
                 <td>{{data.Email}}</td>
                 <td>{{data.id}}</td>
@@ -164,4 +164,42 @@
       </div>
     </div>
   </div>
+
+
+  <div *ngIf="detail4">
+    <div class="col-md-6">
+      <div class="card x ms-4" style="width: 80rem; background-color: rgb(27, 216, 68);">
+        <div class="card-header text-center">
+          <b>Test Reports</b>
+        </div>
+        <div class="card-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Sample Date</th>
+                <th scope="col">Patient Name</th>
+                <th scope="col">Email ID</th>
+                <th scope="col">Sample ID</th>
+                <th scope="col">Haematology</th>
+                <th scope="col">Thyroid Profile</th>
+                <th scope="col">Glucometry</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>{{date | date : "MMM dd,yyyy,h:mm:ss a"}}</th>
+                <td>{{details1.Name}}</td>
+                <td>{{details1.Email}}</td>
+                <td>{{details1.id}}</td>
+                <td><button type="button" class="btn1" (click)="haemato1()">View Detail</button></td>
+                <td><button type="button" class="btn1" (click)="thyro1()">View Detail</button></td>
+                <td><button type="button" class="btn1" (click)="gluco1()">View Detail</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
