--- a/lab/src/app/glucometry/glucometry.component.html
+++ b/lab/src/app/glucometry/glucometry.component.html
@@ -24,7 +24,7 @@
                             #calcium="ngModel">
                     </div>
                     <div class="float-end">
-                        <button class="btn btn-primary mt-2" type="submit" [disabled]="glucoData.invalid">Login</button>
+                        <button class="btn btn-primary mt-2" type="submit" [disabled]="glucoData.invalid">Submit</button>
                     </div>
                 </form>
             </div>
