--- a/lab/src/app/thyroid/thyroid.component.html
+++ b/lab/src/app/thyroid/thyroid.component.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="float-end">
                         <button class="btn btn-primary mt-2" type="submit"
-                        [disabled]="thyroData.invalid">Login</button>
+                        [disabled]="thyroData.invalid">Submit</button>
                     </div>
                 </form>
             </div>
